@@ -180,4 +180,5 @@ AC_SUBST(GCCINC)
 
 AC_OUTPUT([Config.make
 redhat/osm-2.4.9-e.spec
+redhat/osm-2.4.21-EL.spec
 ])
