@@ -8,25 +8,28 @@ DEFINES = -DMODULE -DLINUX -D__KERNEL__
 # Note that arch is still retrieved from /boot/kernel.h.
 # Set __MODULE_KERNEL_<arch> on the make command line to override.
 ifeq ($(KVER),smp)
-  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=0 
+  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=0
+  DEFINES += -D__BOOT_KERNEL_HUGEMEM=0
   DEFINES += -D__BOOT_KERNEL_SMP=1 
   DEFINES += -D__BOOT_KERNEL_UP=0 
 endif
-ifeq ($(KVER),ent)
-  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=1 
+ifeq ($(KVER),enterprise)
+  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=1
+  DEFINES += -D__BOOT_KERNEL_HUGEMEM=0
+  DEFINES += -D__BOOT_KERNEL_SMP=0 
+  DEFINES += -D__BOOT_KERNEL_UP=0 
+endif
+ifeq ($(KVER),hugemem)
+  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=0
+  DEFINES += -D__BOOT_KERNEL_HUGEMEM=1
   DEFINES += -D__BOOT_KERNEL_SMP=0 
   DEFINES += -D__BOOT_KERNEL_UP=0 
 endif
 ifeq ($(KVER),up)
-  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=0 
+  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=0
+  DEFINES += -D__BOOT_KERNEL_HUGEMEM=0 
   DEFINES += -D__BOOT_KERNEL_SMP=0 
   DEFINES += -D__BOOT_KERNEL_UP=1 
-endif
-ifeq ($(KVER),hugemem)
-  DEFINES += -D__BOOT_KERNEL_HUGEMEM=1 
-  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=0 
-  DEFINES += -D__BOOT_KERNEL_SMP=0 
-  DEFINES += -D__BOOT_KERNEL_UP=0 
 endif
 
 INCLUDES = -I. -I$(TOPDIR)/include -I$(KERNELINC) -I$(GCCINC)
