@@ -2,6 +2,6 @@ TOPDIR = ..
 
 include $(TOPDIR)/Preamble.make
 
-DIST_FILES = osm-2.4.9-e.spec.in osm.init
+DIST_FILES = osm-2.4.9-e.spec.in osm-2.4.21-EL.spec.in osm.init
 
 include $(TOPDIR)/Postamble.make
